[package]
name = "chatroom-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"